fixed an issue with grid, and overlapping cards

--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,18 @@
-*, *::before, *::after{
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   font-family: 'Gill Sans', 'Gill Sans MT', "Calibri", 'Trebuchet MS', sans-serif;
   font-weight: normal;
 }
 
 .App-header {
-  background: linear-gradient(to left, rgb(11, 77, 230),  rgb(201, 83, 83));
+  background: linear-gradient(to left, rgb(11, 77, 230), rgb(201, 83, 83));
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   font-size: calc(10px + 2vmin);
-  color: white;
   padding-top: 15px;
 }
 
@@ -20,14 +21,14 @@
   height: 80px;
   border-radius: 10px;
   position: fixed;
-  top: 0; 
+  top: 0;
   background-color: rgb(42, 39, 39, .7);
   margin: 10px;
 }
 
-.main{
-  width: 92%; /* Adjust as needed */
-  height: 80vh; /* Adjust as needed */
+.main {
+  width: 92%;
+  height: 80vh;
   background-color: rgb(42, 39, 39, .7);
   display: flex;
   justify-content: center;
@@ -37,28 +38,38 @@
   margin: 10px;
 }
 
+.grid-container{
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+  grid-gap: 10px;
+}
 
-.my-container{ 
-  width: 95%; /* Adjust as needed */
-  height: 100%; /* Setting height to 100% to fill the parent container */
-  background-color: transparent; /* Making the background transparent */
+.my-container {
+  width: 95%;
+  height: 100%;
+  /* Setting height to 100% to fill the parent container */
+  background-color: transparent;
+  /* Making the background transparent */
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start; /* Aligning items to the start */
-  align-items: flex-start; /* Aligning items to the start */
+  justify-content: flex-start;
+  /* Aligning items to the start */
+  align-items: flex-start;
+  /* Aligning items to the start */
   padding: 20px;
   overflow-y: auto;
 }
 
-.card{
-  margin: 10px; /* Corrected the margin typo */
+.card {
+  margin: 10px;
   cursor: pointer;
 }
 
-.card:hover{
+.card:hover {
   transform: scale(1.05);
   transition: transfrom 0.3s ease-in-out;
   border-color: aqua;
-  border-style: solid ;
+  border-style: solid;
   border-width: 5px;
 }
+
